--- a/app/src/main/res/layout/fragment_add_snap.xml
+++ b/app/src/main/res/layout/fragment_add_snap.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".AddSnap">
+    tools:context=".view.AddSnap">
 
     <ScrollView
         android:layout_width="match_parent"
