--- a/app/src/main/res/menu/menu_snap.xml
+++ b/app/src/main/res/menu/menu_snap.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.fridgeapp.MainActivity">
+    tools:context="com.example.fridgeapp.view.MainActivity">
 
     <item
         android:id="@+id/snap_edit"
