--- a/app/src/main/res/layout/fragment_card_expanded.xml
+++ b/app/src/main/res/layout/fragment_card_expanded.xml
@@ -1,73 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.CardExpanded"
-    android:descendantFocusability="beforeDescendants">
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    tools:context=".view.CardExpanded">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="15">
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_height="0dp"
+            android:layout_weight="15">
 
-            <EditText
-                android:id="@+id/snap_title_output"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter a title"
-                android:layout_marginTop="20dp" />
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Change Image"
-                android:textSize="16sp"
-                android:id="@+id/changeImageTxt"
-                android:layout_gravity="right"
-                android:layout_marginRight="12dp"
-                android:layout_marginBottom="5dp"
-                android:textColor="@color/design_default_color_primary"
-                android:visibility="invisible"
-                android:enabled="false"/>
-            <ImageView
-                android:id="@+id/snap_image"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="#0f0f0f0f"
-                android:padding="1dp"
-                android:src="@drawable/fridge_preview"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:hint="@string/snap_title">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/snap_title_output"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:id="@+id/changeImageTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginBottom="5dp"
+                    android:enabled="false"
+                    android:text="@string/change_image"
+                    android:textColor="#05716C"
+                    android:textSize="16sp"
+                    android:visibility="invisible" />
+
+                <ImageView
+                    android:id="@+id/snap_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="#0f0f0f0f"
+                    android:padding="1dp"
+                    android:src="@drawable/fridge_preview" />
 
 
-            <EditText
-                android:layout_marginTop="20dp"
-                android:id="@+id/snap_comment_output"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Type a commentary"
-                android:inputType="text|textMultiLine"
-                android:maxLines="6"
-                android:scrollbars="vertical"
-               />
-        </LinearLayout>
-    </ScrollView>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/snap_comment_output_layout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:hint="@string/your_commentary"
+                    android:inputType="text|textMultiLine"
+                    android:maxLines="6"
+                    android:scrollbars="vertical">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/snap_comment_output"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+        </ScrollView>
 
     <Button
         android:id="@+id/save_snap_edit_button"
-        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="Add Snap"
+        android:enabled="false"
+        android:text="@string/edit_snap"
         android:textAllCaps="false"
-        android:enabled="false"/>
+        android:visibility="invisible" />
 
-</FrameLayout>
+</LinearLayout>
