--- a/app/src/main/res/menu/menu_snap.xml
+++ b/app/src/main/res/menu/menu_snap.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.fridgeapp.loaders.MainActivity">
 
     <item
         android:id="@+id/snap_edit"
         android:title="Edit a Snap"
-        android:icon="@drawable/ic_baseline_edit_24"
-        app:showAsAction="always" />
+        android:icon="@drawable/ic_baseline_edit_24" />
+
+    <item
+        android:id="@+id/delete_snap"
+        android:title="Delete a Snap" />
 
 </menu>
