--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_cardExpanded_to_listFragment"
             app:destination="@id/listFragment" />
+        <argument
+            android:name="fridge_snap"
+            app:argType="com.example.fridgeapp.data.FridgeSnap" />
     </fragment>
     <fragment
         android:id="@+id/addSnap"
