--- a/app/src/main/res/layout/card_fridge_snap.xml
+++ b/app/src/main/res/layout/card_fridge_snap.xml
@@ -4,16 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardElevation="6dp"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-    app:cardElevation="6dp">
+    android:layout_marginRight="10dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/image_preview"
@@ -21,7 +21,7 @@
             android:layout_height="50dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            />
+            android:contentDescription="@string/card_image_preview" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
