--- a/app/src/main/res/layout/fragment_add_snap.xml
+++ b/app/src/main/res/layout/fragment_add_snap.xml
@@ -57,7 +57,8 @@
                 android:hint="@string/your_commentary"
                 android:inputType="text|textMultiLine"
                 android:maxLines="6"
-                android:scrollbars="vertical">
+                android:scrollbars="vertical"
+                android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/snap_comment_input"
