Android 13 ready update
Heavy update includes fully tested android 13 ready app. OS interaction has been segregated. Permission check has been enhanced and permission request now working as it intended.

--- a/app/src/main/res/menu/menu_snap.xml
+++ b/app/src/main/res/menu/menu_snap.xml
@@ -5,11 +5,11 @@
 
     <item
         android:id="@+id/snap_edit"
-        android:title="Edit a Snap"
+        android:title="@string/edit_snap_option_menu"
         android:icon="@drawable/ic_baseline_edit_24" />
 
     <item
         android:id="@+id/delete_snap"
-        android:title="Delete a Snap" />
+        android:title="@string/delete_snap_option_menu" />
 
 </menu>
